--- a/docs/src/css/styles.css
+++ b/docs/src/css/styles.css
@@ -38,6 +38,22 @@ footer {
     50% {opacity: 0;}
     100% {opacity: 1;}
 }
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+@keyframes smoothScroll {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-100%);
+    }
+}
 .prompt {
     animation: blink 1s infinite;
 }
