--- a/docs/src/css/styles.css
+++ b/docs/src/css/styles.css
@@ -14,6 +14,18 @@ footer {
     text-align: center;
     padding: 10px;
     font-family: monospace;
+}
+#logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    transition: all 2s;
+}
+#logo.small {
+    top: 0;
+    transform: translate(-50%, 0) scale(0.5);
 } 
 #title {
     text-align: center;
