add email form field and validation

--- a/docs/src/css/styles.css
+++ b/docs/src/css/styles.css
@@ -61,6 +61,9 @@ nav {
 #content {
     text-align: left;
 }
+#emailInput:focus {
+    outline: none;
+}
 @media (max-width: 600px) {
     body {
         font-size: 14px;
